testdata/baselines/reference/submodule/conformance/symbolProperty22.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
symbolProperty22.ts(2,5): error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
symbolProperty22.ts(2,6): error TS2304: Cannot find name 'Symbol'.
symbolProperty22.ts(7,12): error TS2304: Cannot find name 'Symbol'.
symbolProperty22.ts(7,40): error TS2339: Property 'length' does not exist on type 'string'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== symbolProperty22.ts (4 errors) ====
    interface I<T, U> {
        [Symbol.unscopables](x: T): U;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }
    
    declare function foo<T, U>(p1: T, p2: I<T, U>): U;
    
    foo("", { [Symbol.unscopables]: s => s.length });
               ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
                                           ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'string'.